--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,10 @@
 
 <html lang="en">
 <head>
+    <meta charset="utf-8">
+	<title>My first Website</title>
     <link rel='stylesheet' type='text/css' href='main.css'>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
-    
 </head>
 <body>
     <div id="container">
