--- a/home.html
+++ b/home.html
@@ -24,8 +24,8 @@
             </nav>
         </div>
         <div class="text2">
-            <h1>This is my first</h1>
-            <h1>Website :D</h1>      
+            <h1 style="margin-bottom: 0px;">This is my first</h1>
+            <h1 style="margin-top: 0px;">Website :D</h1>      
         </div>
         <div class="img1">
             <div><img id="phone" src="img/Phone.png" alt="phone" width="880px" height="250px">
