--- a/about-me.html
+++ b/about-me.html
@@ -64,8 +64,8 @@
                 est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur</p>
         </div>     
         <div class="footer">
-            <img id="logo" src="img/logo.png" alt="logo" width="20%" height="50%">
-            <h5>Dawid Gostek CodeFactory 2020</h5>
+            <img id="logo" src="img/logo.png" alt="logo" width="20%" height="55%">
+            <p>Dawid Gostek CodeFactory 2020</p>
         </div>
     </div>
 </body>
