--- a/home.html
+++ b/home.html
@@ -43,8 +43,8 @@
             </div>
         </div>
         <div class="footer">
-            <img id="logo" src="img/logo.png" alt="logo" width="20%" height="50%">
-            <h5>Dawid Gostek CodeFactory 2020</h5>
+            <img id="logo" src="img/logo.png" alt="logo" width="20%" height="55%">
+            <p>Dawid Gostek CodeFactory 2020</p>
         </div>
     </div>
 </body>
